# cuda-girth

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  cuda_girth-0.1.0-cp312-cp312-linux_x86_64.whl  lemma_cross_level_optimality.md  pyproject.toml
.github/workflows/: publish.yml
bench/: bench_girth.cpp
include/cuda_girth/: batch_state.h  bfs_state.h  csr_graph.h  girth_engine.h  graph_io.h  portability.h  timer.h
python/cuda_girth/: __init__.py  _bindings.cpp  bridge.py
scripts/: cuda_charts.py  gen_graphs.py  run_bench.sh
src/host/: batch_engine.cpp  bfs_state.cpp  csr_builder.cpp  girth_engine.cpp  graph_io.cpp  main.cpp
src/kernel/: bfs_level.cu  frontier_ops.cu  reduce_girth.cu
test/: test_bfs.cpp  test_csr.cpp  test_girth.cpp
